Refactoring AbstractEffect
Replaced JUL with SLF4J.
Simplified createEffect method.

Requires datapack update.